--- a/source/Playnite/Localization/fr_FR.xaml
+++ b/source/Playnite/Localization/fr_FR.xaml
@@ -861,6 +861,7 @@ Images de fond : {2} px (hauteur)
     <sys:String x:Key="LOCSteamUseVerticalCovers">Télécharger des couvertures verticales</sys:String>
 
     <sys:String x:Key="LOCFullscreenFirstTimeError">La configuration initiale n'est pas achevée. Playnite va maintenant redémarrer en mode Bureau pour continuer la procédure.</sys:String>
+    <sys:String x:Key="LOCFullscreenFirstTimeWelcome">La configuration initiale est terminée. GPD vous remercie de votre achat et vous souhaite bon jeu!</sys:String>
     <sys:String x:Key="LOCQuickFilterRecentlyPlayed">Lancés récemment</sys:String>
     <sys:String x:Key="LOCQuickFilterFavorites">Favoris</sys:String>
     <sys:String x:Key="LOCQuickFilterMostPlayed">Temps de jeu</sys:String>
